--- a/resources/scss/template/_nav_footer.scss
+++ b/resources/scss/template/_nav_footer.scss
@@ -168,6 +168,10 @@
   }
 }
 
+#home-nav-footer {
+  padding-bottom: 4px;
+}
+
 #sation-based {
   @media screen and (max-width: 600px) {
     .nav-footer-area-line {
